--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -55,3 +55,17 @@ a {
     font-size: 36px;
     font-weight: 400;
 }
+
+.hide {
+    display: none;
+}
+
+.fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
+@keyframes fade {
+    from{opacity: 0.1;}
+    to{opacity: 1;}
+}
